# slidecraft-ai

./: .env.email.example  .env.example  .gitignore  .mailmap  CLAUDE.md  JLS_중학교_전략_설명회_완성본_원본.pptx  JLS_중학교_전략_설명회_완성본_원본_폰트조정.pptx  JLS_중학교_전략_설명회_완성본_작은폰트.pptx  LANDING_README.md  README.md  about.html  admin.html  ai-providers.js  app.html  app.py  contact.html  demo.html  design-system.js  email-config.py  features.html  i18n.js  index.html  landing.html  ppt.py  pricing.html  pyproject.toml  requirements-waitlist.txt  script.js  server.py  start-servers.py  template-engine.js  test.html  waitlist-server.py  waitlist.db
.claude/: settings.local.json
backend/api/: server.py
config/: pyproject.toml
docs/: CLAUDE.md  EMAIL_SETUP.md
frontend/assets/css/: app.css  main.css
frontend/assets/js/: ai-providers.js  i18n.js  script.js
frontend/pages/: about.html  app.html  contact.html  demo.html  features.html  index.html  pricing.html
web/: README.md  script.js  server.py
