[project]
name = "slidecraft-ai"
version = "0.1.0"
description = "🎨 Transform ideas into stunning presentations with AI - One-click PowerPoint generation using Claude AI"
readme = "README.md"
license = "MIT"
authors = [
    {name = "Kwak Dooil", email = "babel.ai.dub@gmail.com"}
]
keywords = ["ai", "presentation", "ppt", "powerpoint", "claude", "generator"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: JavaScript",
    "Topic :: Office/Business :: Office Suites",
]
requires-python = ">=3.10"
dependencies = []

[project.urls]
Homepage = "https://back2zion.github.io/slidecraft-ai/"
Repository = "https://github.com/back2zion/slidecraft-ai"
Issues = "https://github.com/back2zion/slidecraft-ai/issues"

[dependency-groups]
dev = [
    "python-dotenv>=1.1.1",
]
